[tool.poetry]
name = "repl_python3_blur-validation"
version = "0.1.0"
description = ""
authors = ["minimarvin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
